✨ feature: header 구현

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "VanillaJS_SPA_babel",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "dev": "webpack-dev-server --mode development",
     "build": "webpack --mode production"
